# mpi_lab_3

./: CMakeLists.txt  build.sh  constants.h  linear_matrix.c  linear_matrix.h  main.c  matrix.c  matrix.h  mem_ops.c  mem_ops.h  my_math.c  my_math.h  parallel_matrix_mult.c  parallel_matrix_mult.h
